ui/src/css/graph.css
.graph {
	align-items: center;
	background-color: #ecf0f1;
	display: flex;
	flex-direction: column;
	justify-content: center;
	position: relative;
}

.graph.frame,
.graph.frame .graph-container,
.graph.frame .graph-canvas {
	min-height: 100vh;
}

.graph:hover .graph-slides,
.graph.focus,
.graph.folded:hover {
	outline: 0.9rem solid #ecf0f1;
	z-index: 1;
}

.graph.folded {
	line-height: 3rem;
}

.graph.folded:hover,
.graph.folded.focus {
	outline-color: #dee2e3;
}

.graph.frame:hover .graph-slides,
.graph.preview:hover .graph-slides {
	outline: none;
}

.graph .message,
.graph-container {
	align-items: center;
	display: flex;
	justify-content: center;
	width: 100%;
}

.graph .message {
	color: #7f8c8d;
	margin: 0;
	padding: 0;
}

.graph .message.float {
	background-color: rgba(236, 240, 241, 0.9);
	font-size: 0.9rem;
	left: 1rem;
	line-height: 1.5rem;
	padding: 0.5rem 1rem;
	position: absolute;
	top: 1rem;
	width: auto;
}

.graph .message.warning.float {
	background-color: #f1c40f;
	color: #fff;
	display: none;
	opacity: 0.98;
}

.graph .message.float .fa {
	margin-right: 0.5rem;
}

.graph .message.clickable {
	cursor: pointer;
}

.graph .message .fa {
	font-size: 1.35rem;
	margin-right: 0.35rem;
}

.graph-control {
	display: none;
}

.graph-slides {
	align-items: center;
	cursor: default;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	pointer-events: none;
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
}

.graph:hover .message.warning.float,
.graph:hover .graph-control {
	display: block;
}

.graph-toggle-fold,
.graph-toggle-legend,
.graph-step-backward,
.graph-step-forward,
.graph-menu {
	background-color: #ecf0f1;
	pointer-events: all;
	text-align: center;
}

.graph-toggle-fold,
.graph-toggle-legend,
.graph-step-backward,
.graph-step-forward {
	cursor: pointer;
}

.graph-toggle-fold,
.graph-toggle-legend {
	font-size: 0.8rem;
	line-height: 1.5rem;
	min-width: 4rem;
	text-align: center;
}

.graph-toggle-fold .fa,
.graph-step-backward .fa,
.graph-step-forward .fa {
	display: block;
}

.graph-toggle-fold .fa,
.graph-toggle-legend .fa {
	display: inline-block;
}

.graph-toggle-fold {
	border-radius: 0 0 0.25rem 0.25rem;
	transform: translateY(-1.5rem);
	transition: transform .2s ease-in-out;
}

.graph-toggle-fold.active,
.graph-toggle-fold:hover {
	transform: translateY(0);
}

.grid2 .graph-toggle-fold,
.grid3 .graph-toggle-fold {
	border-bottom-left-radius: 0;
	position: absolute;
	left: 0;
}

.graph-toggle-fold,
.graph-toggle-legend {
	padding: 0 1rem;
}

.graph-toggle-fold .fa,
.graph-toggle-legend .fa {
	margin-right: 0.35rem;
}

.graph-toggle-legend {
	border-radius: 0.25rem 0.25rem 0 0;
}

.graph-step {
	align-items: center;
	justify-content: space-between;
	display: flex;
	flex-grow: 1;
	width: 100%;
}

.graph-step-backward,
.graph-step-forward {
	font-size: 2rem;
	line-height: 5rem;
	transition: transform .2s ease-in-out;
	width: 2.5rem;
}

.graph-step-backward {
	border-radius: 0 0.2rem 0.2rem 0;
	transform: translateX(-3rem);
}

.graph-step-forward {
	border-radius: 0.2rem 0 0 0.2rem;
	transform: translateX(3rem);
}

.graph-step-backward.active,
.graph-step-forward.active,
.graph-step-backward:hover,
.graph-step-forward:hover {
	transform: translateX(0);
}

.graph-menu {
	border-bottom-left-radius: 0.2rem;
	padding: 0 0 0.9rem 0.9rem;
	position: absolute;
	right: 0;
	top: 0;
}

.graph.frame .graph-menu {
	padding: 0.5rem;
}

.graph-menu > .menuitem {
	display: inline-flex;
	height: 1.5rem;
	justify-content: center;
	margin-left: 0.35rem;
	position: relative;
	vertical-align: middle;
}

.graph-menu > .menuitem > .content {
	display: flex;
	align-items: center;
}

.graph-menu > .menuitem > .subcontent {
	top: 1.5rem;
}

.graph-menu > .menuitem.button:hover,
.graph-menu > .menuitem.separator {
	background-color: #bdc3c7;
}

.graph-menu > .menuitem:first-child {
	margin-left: 0;
}

.graph-menu > .menuitem.button {
	text-align: center;
	width: 1.5rem;
}

.graph-menu > .menuitem.button:hover {
	border-radius: 0.2rem;
}

.graph-menu > .menuitem.button a {
	text-decoration: none;
}

.graph-menu > .menuitem.separator {
	width: 1px;
}

.graph-menu .menuitem > .subcontent {
	transform: translateX(1rem);
}

.graph-menu > .menuitem .fa {
	font-size: 1.1rem;
}

.graph-container,
.graph-canvas {
	min-height: 20rem;
}

.graph-container {
	background-color: #fff;
	flex-direction: column;
	flex-grow: 1;
}

.graph-canvas {
	display: none;
	min-width: 100%;
}

.graph.frame .graph-container {
	overflow: auto;
}

.graph.empty .graph-container,
.graph.error .graph-container {
	background-color: transparent;
}

.graph.zooming .chart {
	user-select: none;
}

.graph-cursor {
	background-color: #aaa;
	display: none;
	height: 1px;
	pointer-events: none;
	position: absolute;
	width: 1px;
	will-change: height, left, top;
}

.graph-tooltip {
	background-color: rgba(34, 34, 34, 0.9);
	border-radius: 0.2rem;
	box-sizing: border-box;
	color: #fff;
	display: none;
	font-size: 0.9rem;
	line-height: 1.5rem;
	margin: 0 2rem;
	padding: 0.35rem 0.65rem;
	pointer-events: none;
	position: absolute;
	z-index: 200;
}

.graph-tooltip table {
	border-spacing: 0 0.25rem;
	white-space: nowrap;
	width: 1px;
}

.graph-tooltip thead th,
.graph-tooltip tfoot th {
	color: #aaa;
	font-weight: 500;
}

.graph-tooltip tbody,
.graph-tooltip tfoot {
	text-align: right;
}

.graph-tooltip tbody th {
	font-weight: normal;
	text-align: left;
	width: 100%;
}

.graph-tooltip tbody th,
.graph-tooltip tbody td,
.graph-tooltip tfoot td,
.graph-tooltip tfoot td {
	padding: 0 0.5rem;
	white-space: nowrap;
}

.graph-tooltip tbody .null {
	color: #aaa;
}

.graph-tooltip tfoot th {
	text-align: right;
}

.graph-tooltip .color {
	border-radius: 0.1rem;
	display: inline-block;
	height: 0.75rem;
	margin-right: 0.5rem;
	vertical-align: middle;
	width: 0.75rem;
}

.graph-zoom {
    background-color: rgba(41, 128, 185, 0.35);
    display: none;
    height: 1px;
    pointer-events: none;
    position: absolute;
    width: 1px;
    will-change: height, left, top, width;
}

.graph-legend {
	align-self: flex-start;
	line-height: 1.75rem;
	font-size: 0.9rem;
	max-width: 100%;
	overflow-x: auto;
}

.graph-legend table {
	border-spacing: 0;
	white-space: nowrap;
}

.graph-legend tr.disabled {
	opacity: 0.35;
	pointer-events: none;
}

.graph-legend th {
	font-weight: normal;
}

.graph-legend .label {
	align-items: center;
	cursor: pointer;
	display: flex;
	pointer-events: auto;
	margin-right: 0.65rem;
}

.graph-legend .key {
	opacity: 0.5;
	padding: 0 0.65rem 0 1.35rem;
}

.graph-legend .value {
	cursor: pointer;
}

.graph-legend .value.active span {
	text-decoration: underline;
}

.graph-legend .label .color {
	border-radius: 0.1rem;
	display: inline-block;
	height: 0.8rem;
	margin-right: 0.5rem;
	width: 1rem;
}

@media screen and (max-width: 1024px) {
	.graph-toggle-fold {
		border-bottom-left-radius: 0;
		left: 0;
		position: absolute;
	}
}

